--- a/defs.tex
+++ b/defs.tex
@@ -30,6 +30,12 @@
 \newcommand{\epsr}{{\varepsilon_r}}
 \newcommand{\vg}{{\mathbf{v_g}}}
 
+\newcommand{\ava}{{\mathbf{a_1}}}
+\newcommand{\avb}{{\mathbf{a_2}}}
+\newcommand{\avc}{{\mathbf{a_3}}}
+\newcommand{\avabc}{{\mathbf{a_{1,2,3}}}}
+
+
 \newcommand{\add}[1]{\color{blue}#1\color{black}{}}
 \newcommand{\rmv}[1]{\color{grey}\ensuremath{\vdash}#1\ensuremath{\dashv}\color{black}{}}
 \newcommand{\mdf}[1]{{\color{red}#1}}
